@@ -683,6 +683,7 @@ Localization
         #LOC_BDArmory_PilotAI_Ramming = Ramming
         #LOC_BDArmory_ControlSurfaceLag = Ramming Control Surface Lag
         #LOC_BDArmory_AllowRamming = Allow Ramming
+        #LOC_BDArmory_AllowRammingGroundTargets = Include Ground Targets
 
         #LOC_BDArmory_PilotAI_Ejection = Ejection
         #LOC_BDArmory_EjectOnImpendingDoom = Eject If Doomed
